--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: "^0.5.0+1"
+  firebase_auth: "^0.18.1+2"
+  google_sign_in: "^4.5.4"
+  provider: ^4.3.2+2
+  cloud_firestore: ^0.14.1+3
+  lottie: ^0.6.0
+  google_fonts: ^1.1.0
+  eva_icons_flutter: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,9 +53,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/animations/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
